Fix blurry graphics on Firefox.

--- a/css/board.css
+++ b/css/board.css
@@ -69,6 +69,7 @@
     background-repeat: no-repeat;
     background-position: center;
     cursor: pointer!important;
+    image-rendering: -moz-crisp-edges;
     -webkit-transition: all 200ms;
             transition: all 200ms;
 }
